# verilume

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  TODO.md  Verilume.command  how_it_works.md  launcher.py  pyproject.toml  vision.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: architecture.md  evidence.md  faq.md  installation.md  ocr.md  retrieval.md
scripts/: build_macos_app.py  check_release_artifacts.py
src/verilume/: __init__.py  app.py  cli.py  ingest.py  rag.py  settings.py
src/verilume/core/: __init__.py  agentic_planner.py  agents.py  benchmark.py  citation_verifier.py  claim_verification.py  conversation_context.py  conversation_state.py  document_index.py  document_retrieval.py  embeddings.py  entity_filter.py  equation_repair.py  eval.py  evidence.py  field_labels.py  formula_extraction.py  formula_retrieval.py  formula_store.py  generation.py  graphrag.py  knowledge_graph.py  multimodal_store.py  ocr_blocks.py  ocr_cleaning.py  ocr_retrieval.py  prompt_suggestions.py  query_interpreter.py  query_preprocessing.py  reranking.py  retrieval.py  schemas.py  search_modes.py  search_planner.py  search_policy.py  semantic_cache.py  structured_document_store.py  structured_ocr.py  structured_retrieval.py  table_agent.py  (+3 more)
src/verilume/ui/: __init__.py  chat.py  dashboard.py  header.py  sidebar.py  styles.py
src/verilume/utils/: document_stats.py  exporting.py  formatting.py
tests/: conftest.py  test_agentic_planner.py  test_app.py  test_benchmark.py  test_chat.py  test_claim_verification.py  test_cli.py  test_conversation_context.py  test_dashboard.py  test_diagnostics_schema.py  test_document_retrieval.py  test_document_stats.py  test_entity_filter.py  test_equation_repair.py  test_eval.py  test_evidence.py  test_formatting.py  test_generation_stop.py  test_graphrag.py  test_ingest.py  test_knowledge_graph.py  test_local_first_policy.py  test_prompt_suggestions.py  test_query_interpreter.py  test_query_preprocessing.py  test_rag.py  test_release_artifacts.py  test_retrieval_removal.py  test_search_policy.py  test_security.py  test_semantic_cache.py  test_settings.py  test_sidebar.py  test_specialized_evidence.py  test_stop_button_render.py  test_styles.py  test_table_retrieval.py  test_web_search.py
tests/fixtures/eval_corpus/: battery_storage.txt  gold_questions.json  solar_efficiency.txt  wind_turbine.txt
