[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "verilume"
version = "0.1.0"
description = "Privacy-first desktop AI assistant for documents, research, evidence verification, and hybrid local + web search."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Damian Mingo Ndiwago" }
]
keywords = [
  "privacy",
  "desktop-ai",
  "rag",
  "document-ai",
  "research",
  "semantic-search",
  "hybrid-search",
  "citations",
  "offline",
  "ollama",
  "huggingface",
  "llm",
  "python",
  "desktop",
  "retrieval",
  "research-assistant",
  "offline-ai",
  "open-source",
  "vector-search",
  "chromadb",
  "streamlit",
  "evidence",
  "knowledge-management",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "chromadb>=0.5.5",
  "huggingface-hub>=0.24.0",
  "onnxruntime>=1.14.1,<1.24; python_version<'3.11'",
  "pandas>=2.0.0",
  "Pillow>=10.4.0",
  "pypdf>=4.2.0",
  "pypdfium2>=5.10.1",
  "python-docx>=1.1.2",
  "python-dotenv>=1.0.1",
  "python-pptx>=1.0.2",
  "rapidocr-onnxruntime>=1.2.3",
  "reportlab>=4.2.2",
  "requests>=2.32.3",
  "sentence-transformers>=3.0.1",
  "streamlit>=1.36.0",
  "tavily-python>=0.5.0",
]

[project.urls]
Homepage = "https://ecosveri.dev"
Repository = "https://github.com/DamingoNdiwa/verilume"
Documentation = "https://github.com/DamingoNdiwa/verilume#documentation"
Issues = "https://github.com/DamingoNdiwa/verilume/issues"

[project.optional-dependencies]
mac = ["pyinstaller>=6.10.0"]
dev = [
  "build>=1.2.1",
  "pytest>=8.2.0",
  "ruff>=0.6.0",
  "twine>=5.1.1",
]

[dependency-groups]
dev = [
  "build>=1.2.1",
  "pytest>=8.2.0",
  "ruff>=0.6.0",
  "twine>=5.1.1",
]

[project.scripts]
verilume = "verilume.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/verilume"]

[tool.hatch.build.targets.sdist]
include = [
  "/.env.example",
  "/.github",
  "/.streamlit",
  "/CHANGELOG.md",
  "/CODE_OF_CONDUCT.md",
  "/CONTRIBUTING.md",
  "/Verilume.command",
  "/LICENSE",
  "/README.md",
  "/ROADMAP.md",
  "/SECURITY.md",
  "/TODO.md",
  "/launcher.py",
  "/pyproject.toml",
  "/scripts",
  "/src",
  "/tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"
